--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,18 @@
   "name": "Billboard Inspector",
   "icons": [
     {
-       "src": "/logo.png",
+       "src": "logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon",
        "purpose": "any maskable" 
     },
     {
-      "src": "/logo.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/logo.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
