--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 GEMINI_API_KEY=AIzaSyDbLFObLlKeDbyzVsuWLbV_OjUI2kVyXi8
-BACKEND_URL=https://billboard-1.onrender.com
+BACKEND_URL=https://billboard-txgu.onrender.com/
