--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,19 @@
 GEMINI_API_KEY=AIzaSyDbLFObLlKeDbyzVsuWLbV_OjUI2kVyXi8
-BACKEND_URL=https://billboard-txgu.onrender.com/
+
+const BACKEND_URL = "https://billboard-txgu.onrender.com"; // Your live Render URL
+
+
+# .env file in the /server directory
+
+# Your MongoDB connection string
+MONGO_URI="mongodb+srv://juggernauts6996:shreeram@cluster0.su7f7c3.mongodb.net/employee?retryWrites=true&w=majority&appName=Cluster0"
+
+# Your JWT Secret Key
+JWT_SECRET = "JWT_SECRET=ThisIsJuggernautTeamSuperSecureSecretKeyForMyBillboardApp!@#$%^&*";# Change this to a long, random string
+
+# The public URL of this Render backend (we'll fill this in when you deploy)
+BACKEND_URL="http://localhost:3001" 
+
+# The full URL of your new Hugging Face AI service
+# Replace with your actual Hugging Face Space URL
+HUGGING_FACE_AI_URL="https://juggernaut6996-billboard-inspector-ai.hf.space"
