--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^3.0.1",
