--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,8 @@
 GEMINI_API_KEY=AIzaSyDbLFObLlKeDbyzVsuWLbV_OjUI2kVyXi8
 
-const BACKEND_URL = "https://billboard-txgu.onrender.com"; // Your live Render URL
-
+const BACKEND_URL = " https://billboard-inspector-backend.onrender.com"; // Your live Render URL
 
 # .env file in the /server directory
-
 # Your MongoDB connection string
 MONGO_URI="mongodb+srv://juggernauts6996:shreeram@cluster0.su7f7c3.mongodb.net/employee?retryWrites=true&w=majority&appName=Cluster0"
 
@@ -12,7 +10,7 @@ MONGO_URI="mongodb+srv://juggernauts6996:shreeram@cluster0.su7f7c3.mongodb.net/e
 JWT_SECRET = "JWT_SECRET=ThisIsJuggernautTeamSuperSecureSecretKeyForMyBillboardApp!@#$%^&*";# Change this to a long, random string
 
 # The public URL of this Render backend (we'll fill this in when you deploy)
-BACKEND_URL="http://localhost:3001" 
+BACKEND_URL=" https://billboard-inspector-backend.onrender.com" 
 
 # The full URL of your new Hugging Face AI service
 # Replace with your actual Hugging Face Space URL
