--- a/server/.env
+++ b/server/.env
@@ -10,4 +10,4 @@ JWT_SECRET = "JWT_SECRET=ThisIsJuggernautTeamSuperSecureSecretKeyForMyBillboardA
 BACKEND_URL="https://billboard-inspector-backend.onrender.com" 
 # The full URL of your new Hugging Face AI service
 # Replace with your actual Hugging Face Space URL
-HUGGING_FACE_AI_URL="https://juggernaut6996-billboard-inspector-ai.hf.space"
+HUGGING_FACE_URL="https://juggernaut6996-billboard-inspector-ai.hf.space"
