--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "5.7.4",
+    "@capacitor/cli": "5.7.4",
+    "@capacitor/core": "5.7.4",
     "@google/genai": "^1.13.0",
     "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.12.2",
