--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@capacitor/android": "5.7.4",
+    "@capacitor/camera": "^5.0.10",
     "@capacitor/cli": "5.7.4",
     "@capacitor/core": "5.7.4",
+    "@capacitor/geolocation": "^5.0.8",
     "@google/genai": "^1.13.0",
     "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.12.2",
