--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,21 +1,8 @@
 apply plugin: 'com.android.application'
-// PASTE THIS ENTIRE BLOCK AT THE TOP OF THE FILE
-configurations.all {
-    resolutionStrategy {
-        // This forces Gradle to use the stable version of androidx.core,
-        // ignoring any requests for unstable alpha versions like 1.15.0.
-        force "androidx.core:core:1.13.1"
-        force "androidx.core:core-ktx:1.13.1"
-    }
-}
 
-// The rest of your file starts here...
-android {
-    // ...
-}
 android {
     namespace "com.juggernaut.billboardinspector"
-    compileSdk rootProject.ext.compileSdkVersion
+    compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "com.juggernaut.billboardinspector"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -43,14 +30,7 @@ repositories {
     }
 }
 
-// In C:/.../project/android/app/build.gradle
-
-// ... other configurations like android { ... }
-
 dependencies {
-    // Other existing dependencies might be here...
-
-    // Paste the copied content here
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     implementation "androidx.coordinatorlayout:coordinatorlayout:$androidxCoordinatorLayoutVersion"
@@ -60,7 +40,6 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
-    implementation "androidx.webkit:webkit:$androidxWebkitVersion"
 }
 
 apply from: 'capacitor.build.gradle'
