--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,8 +11,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
-             // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
-             // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
+            // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
+            // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
     }
@@ -22,6 +22,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    // V V V V V ADD THIS ENTIRE BLOCK V V V V V
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            def project = "Juggernaut_ITER_Billboard_Inspector React"
+            def SEP = "-"
+            def buildType = variant.buildType.name
+            def version = variant.versionName
+
+            // This will generate a filename like: BillboardInspector-debug-1.0.apk
+            outputFileName = "${project}${SEP}${buildType}${SEP}${version}.apk"
+        }
+    }
+    // ^ ^ ^ ^ ^ END OF THE BLOCK TO ADD ^ ^ ^ ^ ^
 }
 
 repositories {
